# DesktopPet

./: CMakeLists.txt  PetAnimation.h  PetBase.h  README.md  clockwindow.cpp  clockwindow.h  main.cpp  menuwindow.cpp  menuwindow.h  petstate.cpp  petstate.h  petwidget.cpp  petwidget.h
Image/: Image.qrc
